MediaPlayer: the project has been finished

--- a/js-profesional/website/package.json
+++ b/js-profesional/website/package.json
@@ -15,5 +15,8 @@
   },
   "browserslist": [
     "last 1 Chrome version"
-  ]
+  ],
+  "dependencies": {
+    "@josearmandog02/platzi-media-player": "^1.0.0"
+  }
 }
