PlatziVideo: fake api and hooks were added

--- a/react-js/platzi-video-react/.eslintrc
+++ b/react-js/platzi-video-react/.eslintrc
@@ -25,6 +25,8 @@
   ],
   "rules": {
     "react/jsx-filename-extension": 0,
+    "react/jsx-props-no-spreading": 0,
+    "react/jsx-curly-newline": 0,
     "array-bracket-spacing": 2,
     "arrow-body-style": 0,
     "block-scoped-var": 2,
@@ -40,12 +42,14 @@
     "dot-notation": 0,
     "eol-last": 2,
     "eqeqeq": [2, "allow-null"],
+    "function-paren-newline": 0,
     "func-names": 0,
     "func-style": 0,
     "generator-star-spacing": [2, "both"],
     "guard-for-in": 0,
     "handle-callback-err": [2, "^(err|error|anySpecificError)$" ],
     "indent": [2, 2, { "SwitchCase": 1 }],
+    "implicit-arrow-linebreak": 0,
     "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
     "linebreak-style": 0,
     "max-depth": 0,
@@ -133,7 +137,7 @@
     "no-sync": 0,
     "no-ternary": 0,
     "no-throw-literal": 2,
-    "no-trailing-spaces": 2,
+    "no-trailing-spaces": 0,
     "no-undef": 0,
     "no-undef-init": 2,
     "no-undefined": 0,
@@ -184,7 +188,7 @@
     "react/react-in-jsx-scope": 2,
     "react/self-closing-comp": 2,
     "react/sort-comp": 0,
-    "react/jsx-wrap-multilines": 2,
+    "react/jsx-wrap-multilines": 0,
     "semi-spacing": 0,
     "sort-vars": 0,
     "space-before-blocks": [2, "always"],
