--- a/react-router-and-redux/platzi-video-react-redux/.eslintrc
+++ b/react-router-and-redux/platzi-video-react-redux/.eslintrc
@@ -27,6 +27,9 @@
     "react/jsx-filename-extension": 0,
     "react/jsx-props-no-spreading": 0,
     "react/jsx-curly-newline": 0,
+    "react/jsx-one-expression-per-line": 0,
+    "react/button-has-type": 0,
+    "jsx-a11y/label-has-associated-control": 0,
     "array-bracket-spacing": 2,
     "arrow-body-style": 0,
     "block-scoped-var": 2,
