Set and Delete favorite funcionality was added

--- a/react-router-and-redux/platzi-video-react-redux/.eslintrc
+++ b/react-router-and-redux/platzi-video-react-redux/.eslintrc
@@ -53,6 +53,7 @@
     "handle-callback-err": [2, "^(err|error|anySpecificError)$" ],
     "indent": [2, 2, { "SwitchCase": 1 }],
     "implicit-arrow-linebreak": 0,
+    "import/prefer-default-export": 0,
     "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
     "linebreak-style": 0,
     "max-depth": 0,
@@ -67,6 +68,7 @@
     "no-array-constructor": 2,
     "no-bitwise": 0,
     "no-caller": 2,
+    "no-case-declarations": 0,
     "no-catch-shadow": 0,
     "no-cond-assign": 2,
     "no-console": 0,
