--- a/react-router-and-redux/platzi-video-react-redux/.eslintrc
+++ b/react-router-and-redux/platzi-video-react-redux/.eslintrc
@@ -29,6 +29,7 @@
     "react/jsx-curly-newline": 0,
     "react/jsx-one-expression-per-line": 0,
     "react/button-has-type": 0,
+    "react/destructuring-assignment": 0,
     "jsx-a11y/label-has-associated-control": 0,
     "array-bracket-spacing": 2,
     "arrow-body-style": 0,
