--- a/backend-nodejs/movies-api/package.json
+++ b/backend-nodejs/movies-api/package.json
@@ -15,7 +15,8 @@
     "@hapi/joi": "^17.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.9"
+    "mongodb": "^3.6.9",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
