--- a/backend-nodejs/movies-api/package.json
+++ b/backend-nodejs/movies-api/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env DEBUG=app:* nodemon index",
-    "start": "cross-env NODE_ENV=production node index"
+    "start": "cross-env NODE_ENV=production node index",
+    "test": "mocha --exit",
+    "cover": "nyc npm run test",
+    "report": "nyc report --reporter=html && wslview coverage/index.html"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +26,21 @@
     "eslint": "^7.27.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "mocha": "^8.4.0",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.0"
+    "nyc": "^15.1.0",
+    "prettier": "^2.3.0",
+    "proxyquire": "^2.1.3",
+    "sinon": "^11.1.1",
+    "supertest": "^6.1.3"
+  },
+  "nyc": {
+    "all": true,
+    "include": [
+      "routes",
+      "services",
+      "lib",
+      "utils"
+    ]
   }
 }
