--- a/express-ssr/platzi-videos/package.json
+++ b/express-ssr/platzi-videos/package.json
@@ -14,14 +14,18 @@
   "license": "ISC",
   "dependencies": {
     "@babel/register": "^7.13.16",
+    "asset-require-hook": "^1.2.0",
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "history": "^5.0.0",
+    "ignore-styles": "^5.0.1",
     "md5": "^2.3.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "webpack": "^5.38.1",
@@ -40,7 +44,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
-    "file-loader": "^6.2.0",
+    "file-loader": "5.1.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
