--- a/express-ssr/platzi-videos/package.json
+++ b/express-ssr/platzi-videos/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production",
-    "start": "webpack serve --mode development",
+    "build": "ENV=production webpack-cli --config webpack.config.js",
+    "start": "ENV=production node src/server",
     "start:dev": "nodemon src/server/index"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "classnames": "^2.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "history": "^5.0.0",
     "ignore-styles": "^5.0.1",
     "md5": "^2.3.0",
@@ -30,7 +31,8 @@
     "redux": "^4.1.0",
     "webpack": "^5.38.1",
     "webpack-dev-middleware": "^5.0.0",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-manifest-plugin": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
@@ -38,6 +40,7 @@
     "@babel/preset-react": "^7.13.13",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "compression-webpack-plugin": "^8.0.0",
     "css-loader": "^5.2.6",
     "eslint": "^7.28.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -45,13 +48,12 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "file-loader": "5.1.0",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
     "react-hot-loader": "^4.13.0",
     "sass-loader": "^11.1.1",
+    "terser-webpack-plugin": "^5.1.3",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   }
