--- a/express-ssr/platzi-videos/package.json
+++ b/express-ssr/platzi-videos/package.json
@@ -40,6 +40,7 @@
     "@babel/preset-react": "^7.13.13",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "compression-webpack-plugin": "^8.0.0",
     "css-loader": "^5.2.6",
     "eslint": "^7.28.0",
