--- a/express-ssr/platzi-videos/package.json
+++ b/express-ssr/platzi-videos/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "ENV=production webpack-cli --config webpack.config.js",
     "start": "ENV=production node src/server",
-    "start:dev": "nodemon src/server/index"
+    "start:dev": "nodemon src/server/index",
+    "lint": "eslint src/frontend/ --ext .js --ext .jsx --fix"
   },
   "keywords": [],
   "author": "",
@@ -48,6 +49,7 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
+    "eslint-webpack-plugin": "^2.5.4",
     "file-loader": "5.1.0",
     "mini-css-extract-plugin": "^1.6.0",
     "node-sass": "^5.0.0",
