--- a/passportjs-authentication/ssr-server/package.json
+++ b/passportjs-authentication/ssr-server/package.json
@@ -11,8 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hapi/boom": "^9.1.3",
+    "axios": "^0.21.1",
+    "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "passport": "^0.4.1",
+    "passport-http": "^0.3.0"
   }
 }
