--- a/passportjs-authentication/ssr-server/package.json
+++ b/passportjs-authentication/ssr-server/package.json
@@ -17,7 +17,11 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
-    "passport-http": "^0.3.0"
+    "passport-google-oauth": "^2.0.0",
+    "passport-http": "^0.3.0",
+    "passport-oauth": "^1.0.0"
   }
 }
