--- a/passportjs-authentication/ssr-server/package.json
+++ b/passportjs-authentication/ssr-server/package.json
@@ -17,11 +17,14 @@
     "cross-env": "^7.0.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "passport-http": "^0.3.0",
-    "passport-oauth": "^1.0.0"
+    "passport-oauth": "^1.0.0",
+    "passport-twitter": "^1.0.4"
   }
 }
