--- a/backend-for-frontend/platzivideos-frontend/package.json
+++ b/backend-for-frontend/platzivideos-frontend/package.json
@@ -1,21 +1,20 @@
 {
-  "name": "platzi-video-react",
+  "name": "platzivideos-frontend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "ENV=production webpack-cli --config webpack.config.js",
+    "build": "webpack-cli --config webpack.config.js",
     "start": "ENV=production node src/server",
     "start:dev": "nodemon src/server/index",
     "lint": "eslint src/frontend/ --ext .js --ext .jsx --fix"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jose Gutierrez",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "@babel/register": "^7.13.16",
+    "@babel/register": "^7.14.5",
     "@hapi/boom": "^9.1.3",
     "asset-require-hook": "^1.2.0",
     "axios": "^0.21.1",
@@ -34,25 +33,26 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router": "^5.2.0",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
-    "webpack": "^5.38.1",
+    "webpack": "^5.40.0",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-manifest-plugin": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.4",
-    "@babel/preset-react": "^7.13.13",
+    "@babel/core": "^7.14.6",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "compression-webpack-plugin": "^8.0.0",
+    "compression-webpack-plugin": "^8.0.1",
     "css-loader": "^5.2.6",
-    "eslint": "^7.28.0",
+    "css-minimizer-webpack-plugin": "^3.0.1",
+    "eslint": "^7.29.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
