--- a/backend-for-frontend/platzivideos-frontend/package.json
+++ b/backend-for-frontend/platzivideos-frontend/package.json
@@ -37,6 +37,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "webpack": "^5.40.0",
     "webpack-dev-middleware": "^5.0.0",
     "webpack-hot-middleware": "^2.25.0",
