--- a/backend-for-frontend/platzivideos-frontend/package.json
+++ b/backend-for-frontend/platzivideos-frontend/package.json
@@ -9,7 +9,8 @@
     "start:dev": "nodemon src/server/index",
     "lint": "eslint src/frontend/ --ext .js --ext .jsx --fix",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "update:snapshot": "jest --updateSnapshot"
   },
   "keywords": [],
   "author": "Jose Gutierrez",
@@ -18,13 +19,13 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/register": "^7.14.5",
     "@hapi/boom": "^9.1.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "asset-require-hook": "^1.2.0",
     "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
@@ -69,12 +70,14 @@
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.7",
     "react-hot-loader": "^4.13.0",
+    "react-test-renderer": "^17.0.2",
     "sass-loader": "^11.1.1",
     "terser-webpack-plugin": "^5.1.3",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "jest": {
+    "testEnvironment": "jsdom",
     "setupFilesAfterEnv": [
       "<rootDir>/src/frontend/__test__/setupTest.js"
     ],
